# ltr_pipe

./: CMakeLists.txt  LICENSE  README.md  config.h  make.sh  make_linuxtrack_shared.sh  start_tracking  stop_tracking
src/: linuxtrack.c  ltr_pipe.c  utils.c
